tests/NormalTests/paczka1/small_fuzzy/46210910.err
Error in line 3: A667 S365 79,9
Error in line 7: CVzoMuWZyaw S637 92,6
Error in line 1: msTvmzhXTly S365 12,2
Error in line 15: EFh A667 92,9
